post_all_group_message API

--- a/docs/notes/guide/5. API 参考/2. Message 有关 API.md
+++ b/docs/notes/guide/5. API 参考/2. Message 有关 API.md
@@ -43,6 +43,20 @@ msg = MessageArray().add_text("hello").add_image("/path/a.jpg")
 await api.post_group_array_msg(123456, msg)
 ```
 
+### post_all_group_array_msg
+
+- **功能**: 向所有已加入的群发送 `MessageArray` 消息（慎用）。
+- **参数**:
+  - `msg: MessageArray`
+- **返回**: `dict[str | int, str]`，群号到 message_id 的映射
+- **示例**：
+
+```python
+msg = MessageArray().add_text("hello").add_image("/path/a.jpg")
+res = await api.post_all_group_array_msg(msg)
+print(res)  # {"1234561": "12345671", "1234562": "12345672", ...}
+```
+
 ### post_group_msg
 
 - **功能**: 快速组合群消息（文本/艾特/引用/图片/富文本）。
@@ -63,6 +77,23 @@ await api.post_group_msg(123456, rtf=MessageArray().add_image("C:/a.jpg").add_te
 ```
 
 *不需要的成分可以不填写。*
+
+### post_all_group_msg
+
+- **功能**: 向所有已加入的群发送消息（慎用）。
+- **参数**:
+  - `text: str | None`
+  - `at: str | int | None` 要 @ 的 QQ 号
+  - `reply: str | int | None` 要引用的 message_id
+  - `image: str | None` 图片本地路径或 URL
+  - `rtf: MessageArray | None` 兼容旧富文本
+- **返回**: `dict[str | int, str]`，群号到 message_id 的映射
+- **示例**：
+
+```python
+res = await api.post_all_group_msg(text="hello everyone", img="C:/a.jpg")
+print(res)  # {"1234561": "12345671", "1234562": "12345672", ...}
+```
 
 ### send_group_text
 
