--- a/docs/notes/guide/5. API 参考/4. Group 有关 API.md
+++ b/docs/notes/guide/5. API 参考/4. Group 有关 API.md
@@ -353,6 +353,18 @@ info = await api.get_group_info(123456)
 ```python
 data = await api.get_group_info_ex(123456)
 ```
+### get_group_list
+
+- **功能**: 获取群列表。
+- **参数**: `info: bool = False`，如果为 True 则返回详细信息，否则只返回群号列表
+- **返回**: `list[str]` 或 `list[dict]`
+- **示例**：
+- 
+```python
+groups = await api.get_group_list(info=False)
+print(groups)  # ['123456', ...]
+```
+
 
 ### get_group_member_info
 
