自动生成钩子

--- a/docs/notes/guide/8. 高级教程/3. 其他/4. AI+NcatBot.md
+++ b/docs/notes/guide/8. 高级教程/3. 其他/4. AI+NcatBot.md
@@ -4,23 +4,22 @@ createTime: 2025/03/25 23:21:39
 permalink: /guide/useaidv/
 ---
 
-# 暂时未完成
-
 AI 时代已至, 只需要很低的学习成本, 就能够使用 AI 和 NcatBot 开发自己的 QQ 机器人.
 
 ## NcatBot 是一个 AI 友好的项目
 
 ### AI 专用文档
 
-[AI 专用文档](https://raw.githubusercontent.com/Isaaczhr/NcatBotDocs/refs/heads/master/all-guides.md)，[AI 专用文档(国内)](https://ghfast.top/https://raw.githubusercontent.com/Isaaczhr/NcatBotDocs/refs/heads/master/all-guides.md)
+本项目提供 AI 专用的单文件文档，位于[这里](https://github.com/huan-yp/NcatBotDocs/blob/main/LLM.md)。
 
-将该文档发送给 [kimi](https://kimi.ai)，[deepseek](https://chat.deepseek.com)，描述你的需求，AI 会阅读文档并实现。
+你可以把这个文件下载下来，上传给 AI，AI 就会变成对 NcatBot 无所不知的专家。
 
-chatgpt 和 grok 也有很好的效果，但不推荐使用国内的其它大语言模型。
+像在群里问大佬一样向 AI 提问，它会给你专业的回答。
 
-### 使用示例
+推荐使用：
 
-![image-20250428124457369](https://raw.githubusercontent.com/huan-yp/image_space/master/img/202504281244520.png)
+- [Kimi](https://kimi.com)。
+
 
 
 
