--- a/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.1 事件的发布和订阅.md
+++ b/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.1 事件的发布和订阅.md
@@ -102,6 +102,28 @@ class NcatBotPlugin(...):
     ...
 ```
 
+### 参数绑定失败事件
+
+当用户输入的命令参数与该命令实际要求的参数不匹配时（例如参数缺失、参数类型错误、参数数量不符等），NcatBot 会发布`ncatbot.param_bind_failed` 事件。插件可通过订阅该事件，自定义参数错误的提示逻辑，向用户反馈清晰的错误信息。
+```python
+    async def on_load(self):
+        self.event_bus.subscribe(
+            event_type="ncatbot.param_bind_failed",
+            handler=self.handle_param_error
+        )
+        LOG.info(f"{self.name} 已订阅ncatbot.param_bind_failed事件")
+
+    @command_registry.command("hello", description="简单问候指令（需要姓名参数）")
+    async def hello_cmd(self, event: BaseMessageEvent, name: str):
+        await event.reply(f"Hello!, {name}!")
+
+    async def handle_param_error(self, event: NcatBotEvent):
+        await self.api.post_private_msg(
+            user_id=event.data["event"].user_id,
+            text=f"❌命令「{event.data['cmd']}」\n{event.data['msg']}"
+        )
+```
+当用户发送`/hello TestUser 123`时，则会返回`命令「hello」\n参数解析异常：list index out of range`
 
 ## 发布事件
 
@@ -119,4 +141,3 @@ class MyPlugin(NcatBotPlugin):
         event = Event("MyPlugin.event", {"message": "hello"})
         await self.event_bus.publish_async(event)  # 异步发布不等待结果
 ```
-
